--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
- 
+
   background-color: rgb(43, 41, 41);
 
 }
@@ -20,7 +20,7 @@ h1 {
   height: 70px;
   font-family: sans-serif;
   font-weight: 400;
- 
+
 }
 
 input {
@@ -33,6 +33,9 @@ input {
   position: relative;
   display: flex;
   align-items: center;
+  padding-left: 37px;
+  padding-right: 0 auto;
+  color: white;
 
 }
 
@@ -48,8 +51,7 @@ button {
   padding: 10px;
   border-radius: 5px;
   background-color: rgb(77, 74, 74);
-
-
+  cursor: pointer;
 
 }
 
@@ -66,12 +68,11 @@ button {
 
 .itens {
 
-
-  justify-content: flex-end;
   padding-right: 20px;
   position: absolute;
   top: 215px;
-  right: 670px;
+  right: 310px;
   fill: white;
+  cursor: pointer;
 
 }
